Sólo un punto de control

--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -12,7 +12,48 @@ en tu línea de órdenes para ver qué versión tienes instalada. Si
 tienes la versión 3, estás listo. Si no, continúa leyendo después del
 interludio siguiente.
 
+## Trabajando con la línea de órdenes.
 
+La mayoría de los desarrolladores usan Linux o Mac para trabajar. Es
+posible que tú no lo uses, pero no tienes que preocuparte, porque
+puedes
+trabajar
+[de la misma forma en Windows](https://www.xataka.com/aplicaciones/asi-es-usar-la-consola-bash-de-ubuntu-en-windows-10). En
+las últimas actualizaciones todavía es más fácil,
+pudiendo
+[descargártela desde la Windows Store](https://www.xataka.com/aplicaciones/ubuntu-llega-a-la-windows-store-y-el-matrimonio-microsoft-linux-esta-en-su-mejor-momento). Esta
+línea de órdenes de Linux presenta una serie de ventajas, como poder
+trabajar con [temas](https://github.com/Bash-it/bash-it/wiki/Themes)
+que hacen de tu experiencia algo mucho más agradable, como esto:
+
+![zsh con oh-my-zsh](img/bash.png)
+
+En cualquier caso, tendrás que trabajar para ejecutar estos programas
+de una sola línea o simplemente para entrar en Python y empezar a
+ejecutar cosas. Conviene que conozcas unos cuantos trucos básicos
+
+* Te puedes mover por la línea con las flechas, pero también de
+  palabra en palabra con control →. Control-a te llevará al principio
+  de la línea (a es el principio del alfabeto), control-e al final de
+  la línea (*end*, en inglés)
+
+* Puedes borrar la línea entera con control-k. Para copiar y pegar,
+  mayúsculas-control-c y mayúsculas-control-v. Igual que en cualquier
+  otro lado, sólo que con el *mayúsculas* por delante. 
+  
+* ↑ te permitirá acceder a las órdenes anteriores que has ejecutado y
+  editarlas. También con control-r podrás comenzar a buscar por
+  algunos caracteres que estén en la línea. Por ejemplo, `ctrl-r` +
+  `py` te encontrará la última orden en la que se ha hecho esto.
+
+![Control-r py](img/ctrl-r.png)
+
+* Usa siempre el tabulador para completar. En la primera palabra de la
+  orden te completará el nombre de la misma, en el resto te completará
+  nombres de ficheros y demás. Usa el tabulador y te ahorrarás teclear
+  un montón. Dependiendo del intérprete que uses, te aparecerán
+  diferentes opciones que podrás seleccionar con el cursor.
+  
 
 
 ## Instalando Python
