Terminando una explicación de linux

--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -54,7 +54,16 @@ ejecutar cosas. Conviene que conozcas unos cuantos trucos básicos
   un montón. Dependiendo del intérprete que uses, te aparecerán
   diferentes opciones que podrás seleccionar con el cursor.
   
-
+La línea de órdenes que se usa en los Mac y Linux es la misma, y tiene
+una buena cantidad. Usa [el buscador DuckDuckGo con su servicio de chuletas integrado](https://duckduckgo.com/?q=linux+cheatsheet&t=canonical&ia=cheatsheet) para
+encontrarla. Las primeras órdenes, `ls`, `rm`, `mkdir`, `cd` van a ser las
+que vas a necesitar con
+seguridad. Mira
+[la chuleta completa](https://duckduckgo.com/?q=linux+cheatsheet&t=canonical&ia=cheatsheet&iax=1) para
+ver una buena cantidad de órdenes interesantes, alguna de las cuales
+te puede sacar de un apuro en un momento determinado. Y una vez que la
+uses, está almacenada en tu historia y puedes volver a ella usando,
+como hemos visto antes, control-r. 
 
 ## Instalando Python
 
