Pequeño programa con reduce

--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -92,3 +92,37 @@ tenemos. Usa [esta línea](https://github.com/pyenv/pyenv-installer)
 desde Linux
 
 	curl -L https://raw.githubusercontent.com/pyenv/pyenv-installer/master/bin/pyenv-installer | bash
+
+Si eres usuario de docker y no de Python, puedes usar también los
+[contenedores oficiales](https://hub.docker.com/_/python/) para
+ejecutar lo que sea, inclusive la línea de órdenes que vamos a usar
+más adelente.
+
+## Trabajando con un editor
+
+Aunque sea sólo por el hecho de poder llevar un pequeño diario de lo
+que has hecho, es conveniente que trabajes con Python desde un
+editor. La mayoría de los editores te premiten trabajar con el
+lenguaje que quieras en una de las ventanas mientras tienes el código
+en otra. Si usas `emacs`, el editor viene integrado. Si usas Atom,
+escribe
+
+```
+apm install Repl
+```
+
+para que te instale un REPL, o línea de órdenes, que se puede usar
+para diferentes lenguajes. 
+
+![Línea de órdenes de Python en Atom](img/atom-repl.png)
+
+En cualquier caso conviene conocer y usar, dentro de lo posible, un
+editor para trabajar con cualquier lenguaje. Los editores como los
+mencionados tienen un modo específico para cada lenguaje, que depende
+de la extensión del mismo, que te permite
+desde
+[completar código](https://code.visualstudio.com/docs/languages/python) usando
+la sintaxis del lenguaje hasta
+presentarlo con colores de forma que la estructura del programa sea
+más fácil de entender. 
+
