Termina la sección de editores

--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -124,5 +124,9 @@ desde
 [completar código](https://code.visualstudio.com/docs/languages/python) usando
 la sintaxis del lenguaje hasta
 presentarlo con colores de forma que la estructura del programa sea
-más fácil de entender. 
+más fácil de entender. En algunos casos, como en el de Visual Studio
+Code, el editor y entorno de programación libre de Microsoft, tendrás
+que instalar una extensión específica para poder trabajar con este
+entorno de línea de órdenes.
 
+![Código Python y REPL en VS Code](img/code-repl.png)
