--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -96,13 +96,13 @@ desde Linux
 Si eres usuario de docker y no de Python, puedes usar también los
 [contenedores oficiales](https://hub.docker.com/_/python/) para
 ejecutar lo que sea, inclusive la línea de órdenes que vamos a usar
-más adelente.
+más adelante.
 
 ## Trabajando con un editor
 
 Aunque sea sólo por el hecho de poder llevar un pequeño diario de lo
 que has hecho, es conveniente que trabajes con Python desde un
-editor. La mayoría de los editores te premiten trabajar con el
+editor. La mayoría de los editores te permiten trabajar con el
 lenguaje que quieras en una de las ventanas mientras tienes el código
 en otra. Si usas `emacs`, el editor viene integrado. Si usas Atom,
 escribe
