--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -100,5 +100,31 @@ type(333.)
 <class 'float'>
 ```
 
+Cuando combinamos varias operaciones, el intérprete tiene que
+averiguar qué es lo que hay que aplicar primero. Los paréntesis
+ayudan: siempre se ejecuta primero la operación dentro de los
+paréntesis.
+
+```
+>>> 5*(3**2 + 2**3)
+5*(3**2 + 2**3)
+85
+```
+
+Pero, en ausencia de paréntesis, hay que considerar las *reglas de
+precedencia*. Tienen incluso un nemónico: *Please excuse my dear aunt
+sally*; tomando las iniciales, paréntesis, exponentes, multiplicación,
+división y finalmente adición y substracción. Por eso
+
+```
+5*3**2 + 2**3
+```
+
+ejecutará primero los exponentes, a continuación la multiplicación
+dando `5x9 = 35` y finalmente las sumas. No es habitual que uno se
+encuentre con operaciones demasiado complicadas salvo transcribiendo
+fórmulas, pero es conveniente saberlo y en caso de duda siempre están
+los paréntesis, que además hacen más legible la expresión.
+
 
 
