Limpiando la era

--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -127,4 +127,8 @@ fórmulas, pero es conveniente saberlo y en caso de duda siempre están
 los paréntesis, que además hacen más legible la expresión.
 
 
+> *Ejercicio*: usando `_` para recordar el valor anterior y ↑ para
+> repetir la última orden, ir calculando los valores de una progresión
+> aritmética o geométrica.
+
 
