--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -87,7 +87,7 @@ se separarán por comas.
 Y también de camino, vemos el concepto
 de
 [*duck typing*](https://es.wikipedia.org/wiki/Duck_typing#En_Python). Dependiendo
-de la pinta que tenga lo que se ha tecleado, Python lo considerá una
+de la pinta que tenga lo que se ha tecleado, Python lo considerará una
 cosa u otra: si anda como pato y camina como un pato, es un pato. Y si
 tiene números y un . decimal, pues será un `float`
 
@@ -113,8 +113,8 @@ paréntesis.
 
 Pero, en ausencia de paréntesis, hay que considerar las *reglas de
 precedencia*. Tienen incluso un nemónico: *Please excuse my dear aunt
-sally*; tomando las iniciales, paréntesis, exponentes, multiplicación,
-división y finalmente adición y substracción. Por eso
+Sally*; tomando las iniciales, paréntesis, exponentes, multiplicación,
+división y finalmente adición y sustracción. Por eso
 
 ```
 5*3**2 + 2**3
@@ -128,7 +128,8 @@ los paréntesis, que además hacen más legible la expresión.
 
 
 > *Ejercicio*: usando `_` para recordar el valor anterior y ↑ para
-> repetir la última orden, ir calculando los valores de una progresión
+> repetir la última orden en el intérprete, ir calculando una docena o
+> más de valores de una progresión
 > aritmética o geométrica.
 
 
