--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -132,4 +132,92 @@ los paréntesis, que además hacen más legible la expresión.
 > más de valores de una progresión
 > aritmética o geométrica.
 
+Pero Python no sólo trabaja con números. También puede
+
+## Trabajar con cualquier tipo de caracteres.
+
+Pero vamos a dar un paso hacia atrás, o hacia un lado, para reconocer
+que existen letras más allá de nuestro alfabeto latino. Empezando por
+los emojis, tales como este, ⌣, y terminando con los caracteres de
+alfabetos vivos o muertos como
+este [ꡡ](https://es.wikipedia.org/wiki/Alfabeto_%27Phags-pa). Un
+lenguaje de programación moderno, y un ordenador moderno, debe ser
+capaz de trabajar con todos ellos.
+
+	"þor el poderoso ✌"
+	
+Como hemos visto más arriba, las cadenas o *strings* están rodeadas
+por comillas. Y están compuestas por un número de caracteres
+determinado, que se halla con `len`
+
+```
+>>> len(_)
+len(_)
+17
+```
+
+Las cadenas están compuestas por caracteres, y podemos acceder a ellos
+indicando su índice, que comienza por 0: ` "þor el poderoso ✌"[16]`
+devolverá ✌. También podemos acceder a grupos de caracteres, usando el
+rango `x:y`. `_[0:3]` nos devolverá los 4 primeros caracteres de la
+última cadena, lo que es equivalente a  `_[:3]`. 
+
+Los operadores aritméticos también se pueden usar sobre cadenas. 
+
+>Cuando un operador se puede aplicar sobre tipos diferentes se dice
+>que está *sobrecargado*. En muchos lenguajes también puede definir el
+>usuario sobrecargas adicionales sobre tipos definidos por él.
+
+El `+` concatenará cadenas:
+
+```
+>>> _[0:3]
+_[0:3]
+'þor'
+>>> _ + " y Loki el mentiroso ❄"
+_ + " y Loki el mentiroso ❄"
+'þor y Loki el mentiroso ❄'
+```
+
+y el "*" *multiplicará*: `"þor, "*3+"y más þor"` resultará en `'þor,
+þor, þor, y más þor'`. 
+
+El tipo de estas cadenas es `str`. ¿Y qué ocurre cuando tratamos de
+mezclarlas con los números? Pues que resulta en un error.
+
+![Error por mezclar tipos](img/error-tipo.png)
+
+Aparte de tener *tipo pato*, Python usa también comprobación dinámica
+de tipos para saber si se puede aplicar o no una operación a sus
+operandos. En este caso no encuentra ninguna forma sensata de sumar
+una cadena a un número, así que simplemente expresa su disconformidad
+con el asunto, diciendo que se trata de un `TypeError`. Pero error es
+una palabra un poco fuerte.
+
+## Hablemos de los problemas de entendimiento.
+
+En el caso anterior, el intérprete nos ha dicho: `TypeError: must be
+str, not int`. Pero es leer la palabra **error** y uno empieza a
+sentirse culpable. Es culpa mía, todo lo hago mal, voy a empezar de
+nuevo hasta que lo consiga.
+
+Pero no hay por qué tomárselo así. *Error* es simplemente la forma en
+la que los ordenadores nos dicen "No te he entendido bien". Los
+ordenadores, y los intérpretes de lenguajes, son muy literales y todo
+lo entienden tal y como se ha tecleado. Miran, y si no te entienden te
+lo dicen. Pero también te dan a entender que es un problema de
+expectativas. Esperaban una cosa, y ha sido otra: `must be str, not
+int`. Debe ser un `str`, no un `int`. Si fueran capaces de saber de
+qué cadena se trata, ellos mismos lo harían. De hecho, algunos otros
+lenguajes se comportarán de forma diferente. JavaScript, por ejemplo,
+dirá que `"3.4"+7` es, naturalmente, `3.47` haciendo una conversión
+implícita de un número a una cadena. Otro lenguaje, R, te dirá: `Error
+in "3.4" + 7 : argumento no-numérico para operador binario`. No le
+gusta la cadena y no tiene reparos en decirlo, porque R es un lenguaje
+estadístico, y por tanto (casi) matemático. Perl, sin embargo, llevará
+el *tipado pato* hasta las últimas consecuencias, dando como ersultado
+10.7.
+
+
+
 
