Con los errores

--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -216,7 +216,10 @@ in "3.4" + 7 : argumento no-numérico para operador binario`. No le
 gusta la cadena y no tiene reparos en decirlo, porque R es un lenguaje
 estadístico, y por tanto (casi) matemático. Perl, sin embargo, llevará
 el *tipado pato* hasta las últimas consecuencias, dando como ersultado
-10.7.
+10.7. 
+
+Lo que viene a querer decir que lenguajes diferentes van a entender
+esa expresión, forzosamente ambigua, de forma diferente. 
 
 
 
