Terminando con los errores
Vine por los errores, acabé metiéndome en la filosofía de Python. Que
posiblemente sea mejor hacerlo así que desde el principio, a saco. Los
iremos metiendo poquito a poco, siempre que me acuerde.

--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -187,7 +187,7 @@ mezclarlas con los números? Pues que resulta en un error.
 
 ![Error por mezclar tipos](img/error-tipo.png)
 
-Aparte de tener *tipo pato*, Python usa también comprobación dinámica
+Aparte de tener *tipado pato*, Python usa también comprobación dinámica
 de tipos para saber si se puede aplicar o no una operación a sus
 operandos. En este caso no encuentra ninguna forma sensata de sumar
 una cadena a un número, así que simplemente expresa su disconformidad
@@ -215,11 +215,62 @@ implícita de un número a una cadena. Otro lenguaje, R, te dirá: `Error
 in "3.4" + 7 : argumento no-numérico para operador binario`. No le
 gusta la cadena y no tiene reparos en decirlo, porque R es un lenguaje
 estadístico, y por tanto (casi) matemático. Perl, sin embargo, llevará
-el *tipado pato* hasta las últimas consecuencias, dando como ersultado
+el *tipado pato* hasta las últimas consecuencias, dando como resultado
 10.7. 
 
 Lo que viene a querer decir que lenguajes diferentes van a entender
-esa expresión, forzosamente ambigua, de forma diferente. 
+esa expresión, forzosamente ambigua, de forma diferente. Pero siempre
+te van a dar alguna pista de por qué no han entendido dicha
+expresión. Volvamos a Python: `TypeError: must be str, not int` te
+dice que hay un problema con el tipo de uno de los operandos, que debe
+ser una cadena (`str`), no un entero. Como sólo hay un entero, el
+número 7, eso quiere decir que ahí es donde está el error, al menos
+según Python. De hecho, si lo hacemos al revés, `7+"3.4`, Python nos
+dirá:
+
+```
+TypeError: unsupported operand type(s) for +: 'int' and 'str'
+```
+que es algo más informativo. Ya no te está diciendo que el entero es
+un error, sino que alguno de los dos está equivocado. En las líneas
+anteriores, además, te indica dónde ha ocurrido, aunque `File
+"<stdin>", line 1, in <module>`no sea demasiado amigable. 
+
+En todo caso, estos mensajes te ayudan a entender dónde ha producido
+el malentendido y de qué se trata. Aunque estén en inglés (en la
+mayoría de los casos), conviene leerlos tranquilamente y comprender
+qué es lo que dicen, porque te da la pista de por qué el ordenador no
+ha sido capaz de entender lo que se le quería decir. En este caso,
+porque Python no sabe como sumar dos cosas que tienen un tipo
+diferente. Simplemente, a la siguiente, se le suministran cosas a los
+dos lados del signo + que sean compatibles y listos.
+
+Y si todo falla, siempre puedes buscarlo en Internet. Eliminando lo
+que sea específico de tu código, como nombres de variable y demás,
+puedes
+[buscar el resto](https://www.google.es/search?client=ubuntu&channel=fs&q=TypeError%3A+unsupported+operand+type%28s%29+for+%2B&ie=utf-8&oe=utf-8&gfe_rd=cr&ei=1VxHWYD8BvKJ8QfWtZu4Aw) y
+llegará, en la mayor parte de los casos,
+a
+[StackOverflow](https://stackoverflow.com/questions/2376464/typeerror-unsupported-operand-types-for-str-and-int) donde
+verás contextos similares y una solución al problema. En este caso, te
+viene a decir que hay que hacer una conversión explícita:
+`7+float("3.4")`, lo que está totalmente de acuerdo
+con [el *zen* de Python](https://hipertextual.com/2011/02/zen-python): 
+
+	>Explícito antes que implícito
+	
+Y, por supuesto, toda esta sección se corresponde al de
+
+	>Los errores no deben suceder en silencio
+	
+Como conclusión a esta sección: si el ordenador no te comprende y te
+lo dice cortésmente, lee, comprende, trata de adaptarte a lo que
+requiere, pero si todo falla, Google es tu amigo.
+
+
+
+
+
 
 
 
