Introduciendo la siguiente sección

--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -95,3 +95,10 @@ arriba.
 >que evaluar también el segundo, pero si el primero es verdadero, el
 >resultado va a ser verdadero, así que simplemente devuelven el último
 >operando evaluado. 
+
+Aunque estas operaciones se usan con asiduidad, las que tienen más
+interés son las operaciones de comparación que dan un resultado
+Verdadero o Falso. 
+
+## Comparaciones no odiosas.
+
