Añade ejercicio de satisfacibilidad

--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -100,5 +100,12 @@ Aunque estas operaciones se usan con asiduidad, las que tienen más
 interés son las operaciones de comparación que dan un resultado
 Verdadero o Falso. 
 
+>*Ejercicio*: se dice que una fórmula es ["satisfacible"](https://es.wikipedia.org/wiki/Problema_de_satisfacibilidad_booleana) si es
+>verdadera al menos para una combinación de valores. Con una fórmula
+>de 3 variables, ¿cuantas combinaciones posibles de valores hay?
+>Diseña una fórmula y pruébala sistemáticamente hasta que encuentres
+>si es satisfacible o no. Altérala y conviértela en no-satisfacible,
+>probándola también sistemáticamente. 
+
 ## Comparaciones no odiosas.
 
