mejor con python
y más barras en img

--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -17,7 +17,7 @@ tecleado
 
 	>>> _ 
 	
-![Usando el subrayado para recordar lo último tecleado](img/_.png).
+![Usando el subrayado para recordar lo último tecleado](/img/_.png).
 
 Podemos pasar así el día, así que vamos a empezar a hacer algo con
 estos números. Por ejemplo...
@@ -41,7 +41,7 @@ Los números no son todos iguales. Los enteros y los números reales
 (los que tienen coma decimal) se comportarán de forma diferente,
 aunque no habrá que preocuparse (demasiado) por ello ahora mismo. 
 
-```
+```python
 >>> type(3)
 type(3)
 <class 'int'>
@@ -53,7 +53,7 @@ type(5.2)
 Hay una operación que es bastante peculiar de python, la división
 entera o `//`
 
-```
+```python
 >>> 800//33
 800//33
 24
@@ -64,7 +64,7 @@ división entera siempre será un entero, y los enteros o `Int` se
 pueden usar para cosas en las que los `float` no encajan. Lo que puede
 tener su importancia en casos como este:
 
-```
+```python
 >>> type(800/20)
 type(800/20)
 <class 'float'>
@@ -91,7 +91,7 @@ de la pinta que tenga lo que se ha tecleado, Python lo considerará una
 cosa u otra: si anda como pato y camina como un pato, es un pato. Y si
 tiene números y un . decimal, pues será un `float`
 
-```
+```python
 >>> type(333)
 type(333)
 <class 'int'>
@@ -105,7 +105,7 @@ averiguar qué es lo que hay que aplicar primero. Los paréntesis
 ayudan: siempre se ejecuta primero la operación dentro de los
 paréntesis.
 
-```
+```python
 >>> 5*(3**2 + 2**3)
 5*(3**2 + 2**3)
 85
@@ -116,7 +116,7 @@ precedencia*. Tienen incluso un nemónico: *Please excuse my dear aunt
 Sally*; tomando las iniciales, paréntesis, exponentes, multiplicación,
 división y finalmente adición y sustracción. Por eso
 
-```
+```python
 5*3**2 + 2**3
 ```
 
@@ -150,7 +150,7 @@ Como hemos visto más arriba, las cadenas o *strings* están rodeadas
 por comillas. Y están compuestas por un número de caracteres
 determinado, que se halla con `len`
 
-```
+```python
 >>> len(_)
 len(_)
 17
@@ -170,7 +170,7 @@ Los operadores aritméticos también se pueden usar sobre cadenas.
 
 El `+` concatenará cadenas:
 
-```
+```python
 >>> _[0:3]
 _[0:3]
 'þor'
@@ -185,7 +185,7 @@ y el "*" *multiplicará*: `"þor, "*3+"y más þor"` resultará en `'þor,
 El tipo de estas cadenas es `str`. ¿Y qué ocurre cuando tratamos de
 mezclarlas con los números? Pues que resulta en un error.
 
-![Error por mezclar tipos](img/error-tipo.png)
+![Error por mezclar tipos](/img/error-tipo.png)
 
 Aparte de tener *tipado pato*, Python usa también comprobación dinámica
 de tipos para saber si se puede aplicar o no una operación a sus
@@ -228,7 +228,7 @@ número 7, eso quiere decir que ahí es donde está el error, al menos
 según Python. De hecho, si lo hacemos al revés, `7+"3.4`, Python nos
 dirá:
 
-```
+```python
 TypeError: unsupported operand type(s) for +: 'int' and 'str'
 ```
 que es algo más informativo. Ya no te está diciendo que el entero es
