devuelvo las barras
para que funcione con Pandoc.

--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -26,7 +26,7 @@ línea de órdenes de Linux presenta una serie de ventajas, como poder
 trabajar con [temas](https://github.com/Bash-it/bash-it/wiki/Themes)
 que hacen de tu experiencia algo mucho más agradable, como esto:
 
-![zsh con oh-my-zsh](/img/bash.png)
+![zsh con oh-my-zsh](img/bash.png)
 
 En cualquier caso, tendrás que trabajar para ejecutar estos programas
 de una sola línea o simplemente para entrar en Python y empezar a
@@ -46,7 +46,7 @@ ejecutar cosas. Conviene que conozcas unos cuantos trucos básicos
   algunos caracteres que estén en la línea. Por ejemplo, `ctrl-r` +
   `py` te encontrará la última orden en la que se ha hecho esto.
 
-![Control-r py](/img/ctrl-r.png)
+![Control-r py](img/ctrl-r.png)
 
 * Usa siempre el tabulador para completar. En la primera palabra de la
   orden te completará el nombre de la misma, en el resto te completará
@@ -69,7 +69,7 @@ como hemos visto antes, control-r.
 
 Instálatela de la forma habitual
 
-	sudo apt-get install python3 #Ubuntu
+	sudo apt install python3 #Ubuntu
 	brew  install python3 #OSX
 	choco install python &REM Windows
 
@@ -114,7 +114,7 @@ apm install Repl
 para que te instale un REPL, o línea de órdenes, que se puede usar
 para diferentes lenguajes. 
 
-![Línea de órdenes de Python en Atom](/img/atom-repl.png)
+![Línea de órdenes de Python en Atom](img/atom-repl.png)
 
 En cualquier caso conviene conocer y usar, dentro de lo posible, un
 editor para trabajar con cualquier lenguaje. Los editores como los
@@ -129,4 +129,4 @@ Code, el editor y entorno de programación libre de Microsoft, tendrás
 que instalar una extensión específica para poder trabajar con este
 entorno de línea de órdenes.
 
-![Código Python y REPL en VS Code](/img/code-repl.png)
+![Código Python y REPL en VS Code](img/code-repl.png)
