--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -17,7 +17,7 @@ tecleado
 
 	>>> _ 
 	
-![Usando el subrayado para recordar lo último tecleado](/img/_.png).
+![Usando el subrayado para recordar lo último tecleado](img/_.png).
 
 Podemos pasar así el día, así que vamos a empezar a hacer algo con
 estos números. Por ejemplo...
@@ -185,7 +185,7 @@ y el "*" *multiplicará*: `"þor, "*3+"y más þor"` resultará en `'þor,
 El tipo de estas cadenas es `str`. ¿Y qué ocurre cuando tratamos de
 mezclarlas con los números? Pues que resulta en un error.
 
-![Error por mezclar tipos](/img/error-tipo.png)
+![Error por mezclar tipos](img/error-tipo.png)
 
 Aparte de tener *tipado pato*, Python usa también comprobación dinámica
 de tipos para saber si se puede aplicar o no una operación a sus
