--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -22,7 +22,7 @@ también se aplica de forma lógica (Booleana) a este caso.
 Estos valores se pueden escribir explícitamente (primer principio) en
 nuestro intérprete:
 
-```
+```python
 >>> type(True)
 type(True)
 <class 'bool'>
@@ -37,7 +37,7 @@ Conviene recordar que, para empezar, todo valor tiene un equivalente
 lógico. Estas operaciones no se tienen por qué hacer, necesariamente,
 sobre tipos `bool`. Por ejemplo
 
-```
+```python
 not(3)
 False
 ```
@@ -45,7 +45,7 @@ False
 `not` cambia lo verdadero a falso y lo falso a verdadero, pero siempre
 devolverá un booleano. 
 
-```
+```python
 not(None)
 True
 ```
@@ -53,7 +53,7 @@ True
 Hay otras dos operaciones lógicas: `and` y `or`. `and` necesita que
 sean ciertos los dos operandos:
 
-```
+```python
 3 and ""
 ''
 ```
@@ -61,7 +61,7 @@ sean ciertos los dos operandos:
 Para devolver un valor verdadero, que además será el segundo de los
 operandos
 
-```
+```python
 3.5 and "happy"
 'happy'
 ```
@@ -69,7 +69,7 @@ operandos
 Si el resultado es falso, devolverá el operando que tenga un valor que
 equivalga a falso:
 
-```
+```python
 "" and 3
 ''
 ```
@@ -77,7 +77,7 @@ equivalga a falso:
 En este caso, igual que en el primero, el valor devuelto es `''`, que
 equivale a Falso. Con `or` sucederá algo similar:
 
-```
+```python
 [] or 45
 45
 ```
