--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -109,3 +109,18 @@ Verdadero o Falso.
 
 ## Comparaciones no odiosas.
 
+Algunas operaciones también devuelven un valor lógico: verdadero o falso. Un número es mayor o igual que otro, por ejemplo.
+
+```
+3 < 3.5
+True
+```
+
+Un número es mayor o menor que otro, o menor o igual que otro, y lo mismo sucede con las cadenas
+
+```
+"alto" < "altos"
+True
+```
+
+El orden que se sigue normalmente es parecido al alfabético, pero no exactamente igual.  Se denomina orden *lexicográfico*. 
