--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -17,7 +17,7 @@ tecleado
 
 	>>> _ 
 	
-![Usando el subrayado para recordar lo último tecleado](img/_.png).
+![Usando el subrayado para recordar lo último tecleado](../img/_.png).
 
 Podemos pasar así el día, así que vamos a empezar a hacer algo con
 estos números. Por ejemplo...
@@ -35,7 +35,7 @@ diferencia de otros lenguajes. Por ejemplo, si abres la consola de
 desarrollo en tu navegador (con mayúsculas-control-k en Firefox, por
 ejemplo), tendrás el mismo resultado, aunque estaremos trabajando en JavaScript.
 
-![Resultado en la consola de desarrollo de JavaScript](img/js-resultado.png).
+![Resultado en la consola de desarrollo de JavaScript](../img/js-resultado.png).
 	
 Los números no son todos iguales. Los enteros y los números reales
 (los que tienen coma decimal) se comportarán de forma diferente,
@@ -185,7 +185,7 @@ y el "*" *multiplicará*: `"þor, "*3+"y más þor"` resultará en `'þor,
 El tipo de estas cadenas es `str`. ¿Y qué ocurre cuando tratamos de
 mezclarlas con los números? Pues que resulta en un error.
 
-![Error por mezclar tipos](img/error-tipo.png)
+![Error por mezclar tipos](../img/error-tipo.png)
 
 Aparte de tener *tipado pato*, Python usa también comprobación dinámica
 de tipos para saber si se puede aplicar o no una operación a sus
