Añade conclusiones aquí y allí

--- a/txt/01.empezar.md
+++ b/txt/01.empezar.md
@@ -130,3 +130,10 @@ que instalar una extensión específica para poder trabajar con este
 entorno de línea de órdenes.
 
 ![Código Python y REPL en VS Code](../img/code-repl.png)
+
+## Concluyendo
+
+Después de este capítulo deberías de tener instalado algún entorno con
+el que poder trabajar con Python y ser capaz de ejecutar `python`
+desde la línea de órdenes. Escoge el que más te guste, o instálatelos
+todos. Son software libre y es lo que tienen. 
