--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -263,7 +263,7 @@ Y, por supuesto, toda esta sección se corresponde al de
 
 	>Los errores no deben suceder en silencio
 	
-Como conclusión a esta sección: si el ordenador no te comprende y te
+Como conclusión a esta sección: si el ordenador no te entiende y te
 lo dice cortésmente, lee, comprende, trata de adaptarte a lo que
 requiere, pero si todo falla, Google es tu amigo.
 
