Dejamos la lógica de lado un momento

--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -123,4 +123,30 @@ Un número es mayor o menor que otro, o menor o igual que otro, y lo mismo suced
 True
 ```
 
-El orden que se sigue normalmente es parecido al alfabético, pero no exactamente igual.  Se denomina orden *lexicográfico*. 
+El orden que se sigue normalmente es parecido al alfabético, pero no
+exactamente igual.  Se denomina orden *lexicográfico*. Es más o menos
+como el alfabético, salvo que tiene en cuenta si se trata de
+minúsculas o mayúsculas, el tamaño de las cadenas y también los
+números.
+
+```
+"1" < "uno"
+True
+"menor" > "Mayor"
+True
+```
+
+Desgraciadamente, al seguir el orden del alfabeto Unicode, donde los
+caracteres latinos como la ñ y otros caracteres están más allá de los
+caracteres del alfabeto inglés, también sucede que:
+
+```
+"leño" < "lesa"
+False
+```
+
+La solución a
+esto
+[no es demasiado simple](https://stackoverflow.com/questions/1097908/how-do-i-sort-unicode-strings-alphabetically-in-python). Por
+lo pronto simplemente conviene tratar de evitar la sorpresa cuando se
+usen caracteres que no sean los 23 del alfabeto inglés. 
