--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -132,7 +132,17 @@ los paréntesis, que además hacen más legible la expresión.
 > más de valores de una progresión
 > aritmética o geométrica.
 
-Pero Python no sólo trabaja con números. También puede
+Los número que Python entiende son los números arábigos, vamos, los de
+toda la vida. Si usamos números romanos como Ⅴ no los entenderá como
+tal, sino como un caracter y nos dará un error de variable no
+definida. No en todos los lenguajes es así. Perl 6 trabaja de forma
+nativa con este tipo de números, y `Ⅴ+5` resultará en el número 10, y
+`5**Ⅴ` en 3125. Los lenguajes de programación, poco a poco, van
+empezando a usar el potencial completo de Unicode, pero algunos
+lenguajes, como Python y JavaScript (que también dará un error)
+todavía no han llegado a hacerlo.  
+
+Afortunadamente, Python no sólo trabaja con números. También puede
 
 ## Trabajar con cualquier tipo de caracteres.
 
