Corrige y añade conclusión

--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -277,9 +277,12 @@ Como conclusión a esta sección: si el ordenador no te entiende y te
 lo dice cortésmente, lee, comprende, trata de adaptarte a lo que
 requiere, pero si todo falla, Google es tu amigo.
 
+## Concluyendo
 
-
-
+No es malo equivocarse. Sucede en las mejores familias, incluso en las
+operaciones más básicas. Para las cuales puedes usar Python como si
+fuera una calculadora un poco más complicada y que usara, además,
+cadenas de caracteres. 
 
 
 
