--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -134,7 +134,7 @@ los paréntesis, que además hacen más legible la expresión.
 
 Los número que Python entiende son los números arábigos, vamos, los de
 toda la vida. Si usamos números romanos como Ⅴ no los entenderá como
-tal, sino como un caracter y nos dará un error de variable no
+tal, sino como un carácter y nos dará un error de variable no
 definida. No en todos los lenguajes es así. Perl 6 trabaja de forma
 nativa con este tipo de números, y `Ⅴ+5` resultará en el número 10, y
 `5**Ⅴ` en 3125. Los lenguajes de programación, poco a poco, van
