--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -150,3 +150,9 @@ esto
 [no es demasiado simple](https://stackoverflow.com/questions/1097908/how-do-i-sort-unicode-strings-alphabetically-in-python). Por
 lo pronto simplemente conviene tratar de evitar la sorpresa cuando se
 usen caracteres que no sean los 23 del alfabeto inglés. 
+
+> *Ejercicio*: Pon una expresión que sea cierta si un número está en un intervalo comprendido entre dos números naturales.
+
+## Dos veces no es si.
+
+Los operadores que 
