Añade el último símbolo que quedaba por ahí
A ver si es ese...

--- a/txt/02.datos.md
+++ b/txt/02.datos.md
@@ -235,7 +235,7 @@ expresión. Volvamos a Python: `TypeError: must be str, not int` te
 dice que hay un problema con el tipo de uno de los operandos, que debe
 ser una cadena (`str`), no un entero. Como sólo hay un entero, el
 número 7, eso quiere decir que ahí es donde está el error, al menos
-según Python. De hecho, si lo hacemos al revés, `7+"3.4`, Python nos
+según Python. De hecho, si lo hacemos al revés, `7+"3.4"`, Python nos
 dirá:
 
 ```python
