--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -151,7 +151,7 @@ esto
 lo pronto simplemente conviene tratar de evitar la sorpresa cuando se
 usen caracteres que no sean los 23 del alfabeto inglés. 
 
-> *Ejercicio*: Pon una expresión que sea cierta si un número está en un intervalo comprendido entre dos números naturales.
+> *Ejercicio*: Escribe una expresión que sea cierta (es decir, sea `True`) si un número está en un intervalo comprendido entre dos números naturales.
 
 ## Dos veces no es si.
 
