Pues no era ese

--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -137,7 +137,7 @@ True
 ```
 
 Desgraciadamente, al seguir el orden del alfabeto Unicode, donde los
-caracteres latinos como la ñ y otros caracteres están más allá de los
+caracteres latinos como la `ñ` y otros caracteres están más allá de los
 caracteres del alfabeto inglés, también sucede que:
 
 ```
