Preparado para ampliar el apartado anterior
Así que nos quedamos aquí un ratico.

--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -155,4 +155,33 @@ usen caracteres que no sean los 23 del alfabeto inglés.
 
 ## Dos veces no es si.
 
-Los operadores que 
+Los operadores que se sitúan entre dos operandos se llaman
+binarios. `<=`, por ejemplo, es un operador binario
+
+```
+3 <= 3
+True
+```
+
+Otros operadores sólo necesitan a un operando. El operador de
+negación, que por alguna razón recibe en casi todos los lenguaje el símbolo
+`!`, es uno de ellos. En Python,
+por [aquello de](https://www.python.org/dev/peps/pep-0020/) que *la
+legibilidad cuenta*, es `not`
+
+```
+not True
+False
+```
+
+En otros lenguajes, como Ruby, sí se puede usar el símbolo
+cuasi-universal del `!`
+
+```Ruby
+! true
+```
+
+![! en Ruby](../img/ruby-not.png)
+
+
+
