Corrige y termina apartado

--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -153,6 +153,36 @@ usen caracteres que no sean los 23 del alfabeto inglés.
 
 > *Ejercicio*: Escribe una expresión que sea cierta (es decir, sea `True`) si un número está en un intervalo comprendido entre dos números naturales.
 
+Para comparar si dos cosas son iguales se usa `==` y sirve para todo
+tipo de operandos.
+
+```
+"pepe" == "pepe"
+True
+1 == 0
+False
+```
+
+La [filosofía de Python](https://www.python.org/dev/peps/pep-0020/)
+afirma que debe haber una, y sólo una, manera de hacerlo. En este
+caso, tener un único operador de igualdad para cualquier tipo es la
+forma de lograrlo. Esa filosofía contrasta con la de otros
+lenguajes. JavaScript, por ejemplo, diferencia [igualdad abstracta e
+igualdad estricta](https://developer.mozilla.org/es/docs/Web/JavaScript/Equality_comparisons_and_sameness) y
+tiene un operador para cada una: `==` e `===`. El que se usen varios
+signos `=` en vez de uno solo es porque este se suele reservar para
+asignaciones, y es un error bastante habitual poner `x = y` en vez de
+`x == y`. Algunos compiladores e intérpretes, incluso, avisan en
+ciertas circunstancias del posible error. Son muy majetes. 
+
+Para expresar desigualdad, `!=` es también símbolo cuasi-universal. En
+Python se puede usar con cualquier tipo de dato. 
+
+> *Ejercicio*: Usando sólo los símbolos de mayor y menor y operadores
+> lógicos (`and` y `or`), construir
+> una expresión que sea equivalente a `!=`. Probar con diferentes
+> valores que efectivamente es así. 
+
 ## Dos veces no es si.
 
 Los operadores que se sitúan entre dos operandos se llaman
