No da más de sí este capítulo
Y tengo que introducir algún otro "lateral"

--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -213,5 +213,8 @@ cuasi-universal del `!`
 
 ![! en Ruby](../img/ruby-not.png)
 
-
+En Python nos lo encontramos dentro de la comparación `!=`. ¿Por qué
+no se usa `not`? [Porque *simple es mejor que
+complicado*](https://hipertextual.com/2011/02/zen-python) y `x != y`
+es más simple que `not x == y`. 
 
