Añadiendo precedencia y NAND

--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -218,3 +218,30 @@ no se usa `not`? [Porque *simple es mejor que
 complicado*](https://hipertextual.com/2011/02/zen-python) y `x != y`
 es más simple que `not x == y`. 
 
+> *Ejercicio*: probar, usando todos los casos posibles,
+> las
+> [leyes de De Morgan](https://es.wikipedia.org/wiki/Leyes_de_De_Morgan). ¿Cuál
+> sería el *modo Python* de expresar una expresión de ese estilo?
+
+Y llegados a este punto, conviene hablar otra vez de *precedencia*, es
+decir, orden de evaluación del los operadores. En concreto, `not 0 and
+1`, ¿a qué es igual? ¿A `(not 0) and 1`? ¿O a `not( 0 and 1)`)? En
+general, la precedencia estará marcada por los paréntesis, luego la
+tendrán los operadores unarios (como `-` precediendo a un número) y
+finalmente los binarios, también por su orden. En los operadores
+lógicos, `not` > `and` > `or`, por lo que si quieres negar una
+expresión tendrás que ponerlo entre paréntesis.
+
+Esto conviene tenerlo en cuenta cuando queremos crear operadores
+combinados, como el siguiente: En electrónica, conviene expresar las operaciones lógicas usando el
+mínimo número de *conectores* posibles. Y resulta que `NAND`, donde `a
+NAND b == not (a and b)`, es suficiente para expresar absolutamente
+todos los operadores lógicos unarios y binarios. En este caso el
+paréntesis hace que se ejecute primero el `a and b` antes que el not;
+la precedencia más alta del `not` obliga a que se haga de esta forma. 
+
+> *Ejercicio*: expresar `and`, `or` y `not` usando sólo NAND y probar
+> exhaustivamente, usando valores de True y False, que es así.
+
+
+
