Corrige tipografía y añade palabras

--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -167,8 +167,7 @@ La [filosofía de Python](https://www.python.org/dev/peps/pep-0020/)
 afirma que debe haber una, y sólo una, manera de hacerlo. En este
 caso, tener un único operador de igualdad para cualquier tipo es la
 forma de lograrlo. Esa filosofía contrasta con la de otros
-lenguajes. JavaScript, por ejemplo, diferencia [igualdad abstracta e
-igualdad estricta](https://developer.mozilla.org/es/docs/Web/JavaScript/Equality_comparisons_and_sameness) y
+lenguajes. JavaScript, por ejemplo, diferencia [igualdad abstracta e igualdad estricta](https://developer.mozilla.org/es/docs/Web/JavaScript/Equality_comparisons_and_sameness) y
 tiene un operador para cada una: `==` e `===`. El que se usen varios
 signos `=` en vez de uno solo es porque este se suele reservar para
 asignaciones, y es un error bastante habitual poner `x = y` en vez de
