Corrige y avanza la siguiente sección

--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -213,8 +213,7 @@ cuasi-universal del `!`
 ![! en Ruby](../img/ruby-not.png)
 
 En Python nos lo encontramos dentro de la comparación `!=`. ¿Por qué
-no se usa `not`? [Porque *simple es mejor que
-complicado*](https://hipertextual.com/2011/02/zen-python) y `x != y`
+no se usa `not`? [Porque *simple es mejor que complicado*](https://hipertextual.com/2011/02/zen-python) y `x != y`
 es más simple que `not x == y`. 
 
 > *Ejercicio*: probar, usando todos los casos posibles,
@@ -241,6 +240,12 @@ la precedencia más alta del `not` obliga a que se haga de esta forma.
 
 > *Ejercicio*: expresar `and`, `or` y `not` usando sólo NAND y probar
 > exhaustivamente, usando valores de True y False, que es así.
+
+Al final, los lenguajes de programación son lenguajes que te permiten
+expresar y resolver problemas. Enseñar a pensar usando ordenadores se
+denomina 
+
+## Pensamiento computacional.
 
 
 
