--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -245,7 +245,69 @@ Al final, los lenguajes de programación son lenguajes que te permiten
 expresar y resolver problemas. Enseñar a pensar usando ordenadores se
 denomina 
 
-## Pensamiento computacional.
+## Pensamiento computacional,
+
+y se basa
+en
+[tres pilares](https://es.wikipedia.org/wiki/Pensamiento_computacional):
+*descomposición*, *reconocimiento de patrones* y *abstracción*.
+
+La abstracción se basa, entre otras cosas, en saber elegir la
+estructura de datos adecuada para el problema con el que estamos
+trabajando. ¿Se trata de un número? ¿Un conjunto de números? ¿Un
+conjunto de caracteres? En cualquier lenguaje de programación, la
+estructura de datos elegida determina qué se puede hacer,
+eficientemente o posiblemente, con un dato determinado. Incluso el
+lenguaje de programación a usar, porque no todos los lenguajes pueden
+trabajar con todos los datos fácilmente. Por ejemplo, Python puede
+usar números complejos, con una parte real y otra imaginaria, como
+tipo de dato básico.
+
+```Python
+>>> 3+0.1j
+3+0.1j
+(3+0.1j)
+>>> _**2
+_**2
+(8.99+0.6000000000000001j)
+```
+En Python, la parte imaginaria se representa, por alguna razón, por
+`j` en vez del convencional `i`
+
+A priori, es complejo pensar en algún problema "del mundo real" que
+use los números complejos. Pero las matemáticas son también del mundo
+real, y problemas como "¿Diverge la sucesión (1+πi)ⁿ?" tendrá que
+comenzar por una fase de abstracción en la que se decidirá que la
+forma más eficiente de trabajar es usando estos números
+complejos. Trabajando en la línea de órdenes:
+
+```Python
+>>>1+3.14j 
+
+>>> _*(1+3.14j)
+_*(1+3.14j)
+(3.141592653589793+9.864600932271951j)
+>>> _*(1+3.14j)
+_*(1+3.14j)
+(-27.833254273744135+19.729201864543903j)
+>>> _*(1+3.14j)
+_*(1+3.14j)
+(-89.78294812841199-67.66721655501269j)
+>>> _*(1+3.14j)
+_*(1+3.14j)
+(122.69211185432786-349.5856736782264j)
+```
+
+Vemos que tiene toda la pinta de diverger, así que la respuesta es que
+sí. El uso de números complejos venía de forma natural en este caso,
+y el hecho de que Python lo tenga como estructura de datos básica es
+un hecho afortunado, por lo que es la elección natural también. En
+otros lenguajes, como JavaScript, habría sido algo más complicado,
+teniendo que usar vectores y definir una serie de funciones de
+multiplicación de tales vectores al modo complejo.  
+
+
+
 
 
 
