Terminando el tema 3 con pensamiento computacional

--- a/txt/03.logica.md
+++ b/txt/03.logica.md
@@ -306,6 +306,36 @@ otros lenguajes, como JavaScript, habría sido algo más complicado,
 teniendo que usar vectores y definir una serie de funciones de
 multiplicación de tales vectores al modo complejo.  
 
+La *descomposición*, por otro lado, trata de descomponer un problema
+monolítico en varios problemas más pequeños. Por ejemplo, descomponer
+un problema en una serie de operaciones básicas, todas ellas ya
+conocidas, que se puedan ejecutar en secuencia, en nuestro caso desde
+la línea de órdenes. Por ejemplo, veamos el problema de recrear todos
+los números del 1 al 5 usando exactamente 4 números 5, por separado o
+como cifras de un solo número; también como decimales. La primera
+descomposición es natural: hacer cada número por separado. Pero la
+segunda es tratar de conseguir partes de un número usando operaciones
+con 5s. Cero, por ejemplo, es 5-5. Uno, 5/5. Esta no es la solución a
+los dos primeros, pero sí para el tercero, 2 == 5/5 + 5/5. ¿Y cómo
+haríamos 5? Teniendo en cuenta que cualquier cosa multiplicada por 0
+es cero... 
+
+> *Ejercicio*: usar sólo números 5 para reconstruir los números del 0
+> al 5. Si queda tiempo, hacerlo hasta el 10. 
+
+
+El último mecanismo, el *reconocimiento de patrones*, se aleja más de
+lo puramente computacional, siendo simplemente una herramienta del
+pensamiento crítico. Pero eso no quiere decir que no sea útil. Por
+ejemplo, muchas de las técnicas, o la mayoría, de las usadas en el
+ejercicio anterior, ¿se podrían usar con cualquier otro número, es
+decir, sustituyendo el 5 por el 4 o por el 7? 
+
+> *Ejercicio*: ¿Para qué números se pueden usar más o menos los mismos
+> patrones que para el 5? ¿Funciona con el 4? ¿Funciona con el 6?
+> Específicamente, ¿con qué resultados hay que hacer pequeños cambios
+> para que funcione?
+
 
 
 
